# StockSage

./: .gitignore  PLANNING.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: orchestrator.py
backend/app/agent/tools/: __init__.py  fundamental.py  news.py  technical.py
backend/app/api/: analyze.py  chat.py  news.py  report.py  watchlist.py
backend/app/db/: crud.py  database.py  models.py
backend/app/services/: market_data.py  scheduler.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AnalysisReport.jsx  Chart.jsx  ChatPanel.jsx  NewsPanel.jsx  Watchlist.jsx
frontend/src/hooks/: useAnalysis.js  useWatchlist.js
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  StockDetail.jsx
