[project]
name = "stocksage-backend"
version = "0.1.0"
description = "StockSage - Stock Analysis AI Agent Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "anthropic>=0.26.0",
    "yfinance>=0.2.40",
    "ta>=0.11.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
